--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3_7\\python.exe",
-    "python.formatting.provider": "black"
+    "python.pythonPath": "C:\\Users\\89965\\AppData\\Local\\Continuum\\Anaconda3\\python.exe",
+    "python.formatting.provider": "black",
+    "python.linting.enabled": true
 }
