corrections bugs suite a tests de production

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,4 +1,11 @@
 {
-  "include": [".", "./pyetl"],
-  "exclude": ["./outils"]
+    "include": [
+        ".",
+        "./pyetl"
+    ],
+    "exclude": [
+        "./outils"
+    ],
+    "pythonPlatform": "Windows",
+    "reportMissingImports": "error"
 }
