debug clonage de base
debug sur test de clonage base

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -7,5 +7,6 @@
         "./outils"
     ],
     "pythonPlatform": "Windows",
-    "reportMissingImports": "error"
+    "reportMissingImports": "error",
+    "venvPath": "/home/foo/.venvs"
 }
