--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\outils\\python\\python38\\python.exe",
+    "python.pythonPath": "c:\\Users\\89965\\Mes Documents (local)\\projet_mapper\\test_mapper\\env_mapper\\Scripts\\python.exe",
     "python.formatting.provider": "black",
     "python.linting.enabled": false,
     "python.linting.pylintEnabled": true,
