--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\claude\\Anaconda3\\envs\\mapper\\python.exe",
+    "python.pythonPath": "C:\\Users\\89965\\Mes Documents (local)\\projet_mapper\\test_mapper\\env_mapper\\Scripts\\python.exe",
     "python.formatting.provider": "black",
     "python.linting.enabled": false,
     "python.linting.pylintEnabled": true,
@@ -17,5 +17,6 @@
         "plaintext",
         "rst"
     ],
-    "python.terminal.activateEnvInCurrentTerminal": true
+    "python.terminal.activateEnvInCurrentTerminal": true,
+    "python.venvPath": "C:\\Users\\89965\\Mes Documents (local)\\projet_mapper\\test_mapper\\"
 }
